--- a/UnitTest/UnitTest.vcxproj
+++ b/UnitTest/UnitTest.vcxproj
@@ -96,7 +96,9 @@
       <AdditionalDependencies>Utils.lib;gtestd.lib;gmock.lib;log4cplusD.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy /D /Y "$(LOG4CPLUS_ROOT)\msvc14\Win32\bin.$(Configuration)\log4cplusD.dll" "$(OutDir)"</Command>
+      <Command>xcopy /D /Y "$(LOG4CPLUS_ROOT)\msvc14\Win32\bin.$(Configuration)\log4cplusD.dll" "$(OutDir)"
+xcopy /D /Y "$(ProjectDir)log4cplus.properties" "$(SolutionDir)"
+xcopy /D /Y "$(ProjectDir)log4cplus.properties" "$(OutDir)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -130,7 +132,9 @@
       <AdditionalDependencies>Utils.lib;gtestd.lib;gmock.lib;log4cplusD.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy /D /Y "$(LOG4CPLUS_ROOT)\msvc14\Win32\bin.$(Configuration)\log4cplus.dll" "$(OutDir)"</Command>
+      <Command>xcopy /D /Y "$(LOG4CPLUS_ROOT)\msvc14\Win32\bin.$(Configuration)\log4cplus.dll" "$(OutDir)"
+xcopy /D /Y "$(ProjectDir)log4cplus.properties" "$(SolutionDir)"
+xcopy /D /Y "$(ProjectDir)log4cplus.properties" "$(OutDir)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
